welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if(getX()==getMondeLargeur() && getY()=getMondeHauteur()) {
                                     ^ColumnByColumn:13: error: not found: value y
			y=0
                        ^ColumnByColumn:14: error: not found: value x
			x=x+1
                        ^ColumnByColumn:16: error: not found: value y
			y=y+1
                        ^ColumnByColumn:18: error: not found: value cpt
		ecritMessage(cpt);
                             ^ColumnByColumn:19: error: not found: value cpt
		cpt+=1
                ^ColumnByColumn:20: error: not found: value x
		setPos(x,y);
                       ^ColumnByColumn:11: error: type mismatch;
 found   : Unit
 required: Boolean
	while (!positionFinale) {
        ^